--- a/content/blog/change-data-capture-breaks-encapsulation-does-it-though.asciidoc
+++ b/content/blog/change-data-capture-breaks-encapsulation-does-it-though.asciidoc
@@ -145,7 +145,7 @@ image::cdc-breaks-encapsulation-does-it-2.png[]
 
 link:https://github.com/ververica/flink-cdc-connectors[Flink CDC] is used to ingest the raw CDC feed into a Flink SQL table. The data is transformed and published to a Kafka topic which adheres to a stable data contract (specifically, the topic's schema represents the schema part of the contract). The source and sink connectors are represented as tables in Flink SQL; here's the definition of the source table, `customers`, using the `postgres-cdc` connector, which itself is based on top of the Debezium link:https://debezium.io/documentation/reference/stable/connectors/postgresql[connector for Postgres] (you can find the complete link:https://github.com/decodableco/examples/tree/main/cdc-data-contracts[source code] for this blog post in the link:https://github.com/decodableco/examples/[decodableco/examples] repository on GitHub):
 
-
+.Configuration of the Postgres source connector
 [source,sql,linenums]
 ----
 CREATE TABLE customers (
@@ -172,11 +172,10 @@ CREATE TABLE customers (
   'decoding.plugin.name' = 'pgoutput'
 );
 ----
-_Listing 1: Configuration of the Postgres source connector_
 
 For publishing the change events into a Kafka topic `customers`, another table, `customers_public`, is created which looks like this:
 
-
+.Configuration of the Kafka sink connector
 [source,sql,linenums]
 ----
 CREATE TABLE customers_public (
@@ -197,13 +196,12 @@ WITH (
   'value.format' = 'json'
 );
 ----
-_Listing 2: Configuration of the Kafka sink connector_
 
 Note that the `upsert-kafka` connector must be used (i.e.
 not the `kafka` one), as I've discussed recently in link:https://www.youtube.com/watch?v=1ezf3OyLz3w[this Data Streaming Quick Tip episode].
 Finally, the transformation from the source stream into the published format is a simple `INSERT` statements, using just a few lines of Flink SQL:
 
-
+.Flink SQL job for transforming the source table into the sink table
 [source,sql,linenums]
 ----
 INSERT INTO customers_public
@@ -223,7 +221,6 @@ INSERT INTO customers_public
     DATE_FORMAT(registered, 'dd-MM-yyyy')
   FROM customers;
 ----
-_Listing 3: Flink SQL job for transforming the source table into the sink table_
 
 When submitting this query, a job will be deployed onto your Flink cluster which executes the query in a continuous fashion, propagating any changes from the source to the destination, whenever there is a row inserted, updated, or deleted in the source table.
 The following transformations are applied:
@@ -274,7 +271,7 @@ image::cdc-breaks-encapsulation-does-it-3.png[]
 
 A Flink SQL link:https://nightlies.apache.org/flink/flink-docs-release-1.18/docs/dev/table/functions/udfs/[user-defined function] (UDF) for aggregating the elements of the "many" side of the join into an array in a type-safe way can come in handy here, something I've recently explored in link:https://www.youtube.com/watch?v=ICJ7-YyaC-4[this video]. Using the `ARRAY_AGGR()` function discussed in that quick tip, the two source tables could be joined like this:
 
-
+.Joining two source change streams into a single public stream
 [source,sql,linenums]
 ----
 INSERT INTO customers_public
@@ -304,7 +301,6 @@ INSERT INTO customers_public
   GROUP BY
     c.id, fname, lname, email, zip, c.phone, registered, status, preferred.`value`;
 ----
-*Listing 4: Joining two source change streams into a single public stream.*
 
 The `phone_numbers` table is left-joined here twice, once to obtain the preferred phone number and once for all the non-preferred numbers, which then are exposed as an array via the aforementioned `ARRAY_AGGR()` function.
 
@@ -369,7 +365,7 @@ This makes sure the job, after restarting, will continue to process the source c
 `SET 'execution.savepoint.path' = '/path/to/savepoints/savepoint-<job id>';`
 . In Flink, create a new version of the job, using the `COALESCE()` function to retrieve the first name either from the old or the new field, depending on which one exists in the incoming event:
 
-
+.Retrieving the first name from the correct column, depending on which value is present
 [source,sql,linenums]
 ----
 INSERT INTO customers_public
@@ -379,7 +375,6 @@ INSERT INTO customers_public
     ...
   FROM customers;
 ----
-*Listing 5: Retrieving the first name from the correct column, depending on which value is present*
 
 With this procedure, any consumers of the public data contract are fully shielded from the column name change in the database.
 The job will source the first name from the correct incoming field, no matter whether it processes a change event from before or after the schema change was made in the database.
